--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>I am hosted with github pages</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, cum. Praesentium quia modi dolorem facere consequatur. Nemo alias ipsum, amet facilis assumenda quae maxime beatae fuga impedit non nihil deleniti.</p>
 </body>
 </html>
