--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
   gtag('config', 'UA-25335284-3');
 </script>
-    <link href="/css/base.css" rel="stylesheet" type="text/css"/>
+<!--/css/base.css changed to base.css-->
+    <link href="base.css" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet" type="text/css" async>
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,500&display=swap" rel="stylesheet" async>
     <title>Bartosz Ciechanowski</title>
